--- a/style.css
+++ b/style.css
@@ -151,8 +151,7 @@
     margin: 10px;
 }
 .char-img{
-    background: #000;
-    color: #000;
+    width: 50px;
     padding: 5px;
     margin-bottom: 10px;
 }
@@ -186,4 +185,61 @@
     to{
         transform: translateY(80px);
     }
+}
+.char-press{
+    width: 30px;
+    position: relative;
+    left: -43px;
+    top: 6px;
+}
+.graph-main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.graph-img{
+    width: 200px;
+}
+.graph-list{
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: whitesmoke;
+}
+.graph-item{
+    padding: 5px;
+}
+.graph-text{
+    color: darkcyan;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: larger;
+}
+.graph-subtext{
+    color: darkgray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: smaller;
+}
+.graph-next, .graph-back{
+    width: 30px;
+    position: relative;
+    top: -22px;
+}
+.graph-next{
+    position: relative;
+    left: 950px;
+    top: -200px;
+}
+.graph-back{
+    position: relative;
+    left: 150px;
+    top: 148px;
+}
+.graph-main-2{
+    display: none;
+}
+.active-btn{
+    display: none;
 }
